# steppingstone

./: README.md  config.txt  db.txt
dep/: empty
src/aceinternal/GsAssistant/: CMakeLists.txt  GsAssistant.vcproj  GsAssistant.vcxproj  GsAssistant.vcxproj.filters
src/aceinternal/GsAssistant/src/: GsAssistant.cpp  ManageSession.cpp  ManageSession.h
src/aceinternal/cachesys/: CMakeLists.txt  cache_config.xml  cachesys.vcproj  cachesys.vcxproj  cachesys.vcxproj.filters  makefile
src/aceinternal/cachesys/inc/: cached.h  config.h  stat.h
src/aceinternal/cachesys/protocal/: cache_auto_assistant.h
src/aceinternal/cachesys/protocal_factory/: factory.cpp  factory.h
src/aceinternal/cachesys/src/: DataRequestInfo.cpp  DataRequestInfo.h  DbLoader.cpp  DbLoader.h  EntityHander.cpp  EntityHander.h  ManageConvertSession.cpp  ManageConvertSession.h  ManageSessionPool.cpp  ManageSessionPool.h  cached.cpp  config.cpp
src/aceinternal/cachesys/src/serialize/: FileNameGenerator.cpp  FileNameGenerator.h  ManageExpiredItem.cpp  ManageExpiredItem.h  ManageSerialize.cpp  ManageSerialize.h  SQLiteSerialize.cpp  SQLiteSerialize.h  Serialize.cpp  Serialize.h  SerializeFactory.cpp  SerializeFactory.h
src/aceinternal/charsys/: CMakeLists.txt  char.vcproj  charsys.vcproj  charsys.vcxproj  charsys.vcxproj.filters  makefile
src/aceinternal/charsys/src/: MakeGuid.cpp  MakeGuid.h  ManageConfig.cpp  ManageConfig.h  ManageFini.cpp  ManageFini.h  ManageGuid.cpp  ManageGuid.h  ManageJobInit.cpp  ManageJobInit.h  ManagePlayerInit.cpp  ManagePlayerInit.h  ManageRoleRes.cpp  ManageRoleRes.h  ManageRoundomName.cpp  ManageRoundomName.h  char.cpp
src/aceinternal/charsys/src/cache/: ManageCacheSession.cpp  ManageCacheSession.h  RouteCachePacket.cpp  RouteCachePacket.h
src/aceinternal/convertsys/: CMakeLists.txt  convert.vcproj  convert.vcxproj  convert.vcxproj.filters  makefile
src/aceinternal/convertsys/src/: CacheSession.cpp  CacheSession.h  ManageCacheOutput.cpp  ManageCacheOutput.h  ManageCacheSession.cpp  ManageCacheSession.h  ManageConfig.cpp  ManageConfig.h  ManageFini.cpp  ManageFini.h  ManageSQLiteFile.cpp  ManageSQLiteFile.h  ManageSQLiteFileToDb.cpp  ManageSQLiteFileToDb.h  MiniDumper.cpp  convert.cpp
src/aceinternal/gamelogic/: CMakeLists.txt  gamelogic.vcproj  gamelogic.vcxproj  gamelogic.vcxproj.filters  makefile
src/aceinternal/gamelogic/inc/: AccBuyRes.h  AccOnlineRes.h  AchievementRes.h  AmahRes.h  AnswerStruct.h  AnswerStructMap.h  ArrestControllerRes.h  ArrestListRes.h  BattlegroundBetRes.h  BattlegroundBuffRes.h  BattlegroundDatetimeRes.h  BattlegroundRewardRes.h  BillListRes.h  ChargequestRes.h  ColorStruct.h  ColorStructMap.h  CondorStruct.h  CondorStructMap.h  DailyPointsRes.h  DailyQuestLibraryRes.h  DailyQuestRes.h  DanyaoHechengRes.h  DodgeMiniRes.h  DodgeRes.h  DodgeRevokeRes.h  DoubleexpRes.h  Equip_gettingRes.h  EscortAgencyRes.h  EscortCarRes.h  EscortSystemRes.h  EscortTerminalRes.h  FailScoreRes.h  FiresRes.h  FiresattackRes.h  FirstBuyRes.h  FishingRes.h  FlowerRes.h  FreeTimeBag.h  FriendAddInfoRes.h  FutureBonusRes.h  (+109 more)
src/aceinternal/gamelogic/src/: ManageResourceImp.cpp  PlayerFunction.cpp  gamelogic.cpp
src/aceinternal/gate/: CMakeLists.txt  gate.vcproj  gate.vcxproj  gate.vcxproj.filters  makefile
src/aceinternal/gate/inc/: gate.h
src/aceinternal/gate/src/: AppNotifyInterface.cpp  AppNotifyInterface.h  GateLogger.h  ManageConfig.cpp  ManageConfig.h  ManageFini.cpp  ManageFini.h  ManageMasterSession.cpp  ManageMasterSession.h  ManageReduplication.cpp  ManageReduplication.h  ManageTranscriptCondition.cpp  ManageTranscriptCondition.h  PacketStream.cpp  PacketStream.h  gate.cpp
src/aceinternal/guidsys/: CMakeLists.txt  guidsys.vcproj  guidsys.vcxproj  guidsys.vcxproj.filters  makefile
src/aceinternal/guidsys/src/: AllocGuid.cpp  AllocGuid.h  ManageConfig.cpp  ManageConfig.h  ManageFini.cpp  ManageFini.h  ManageSession.cpp  ManageSession.h  guidsys.cpp
src/aceinternal/membersys/: CMakeLists.txt  membersys.sln  membersys.vcproj  membersys.vcxproj  membersys.vcxproj.filters
src/aceinternal/membersys/src/: DynamicParse.cpp  DynamicParse.h  DynamicParseInterface.cpp  DynamicParseInterface.h  GateSession.cpp  GateSession.h  ManageConfig.cpp  ManageConfig.h  ManageGateSession.cpp  ManageGateSession.h  ManageMemberListen.cpp  ManageMemberListen.h  ManageMemberRegister.cpp  ManageMemberRegister.h  ManageMemberSession.cpp  ManageMemberSession.h  ManageMemberSessionCooler.cpp  ManageMemberSessionCooler.h  ManageMemberSessionOutput.cpp  ManageMemberSessionOutput.h  ManageOnlinePlayer.cpp  ManageOnlinePlayer.h  ManageRoleDb.cpp  ManageRoleDb.h  MemberProtocol.cpp  MemberProtocol.h  MemberSession.cpp  MemberSession.h  main.cpp
src/aceinternal/plugin/manage_short/: CMakeLists.txt  ManageShort.vcproj  ManageShort.vcxproj  ManageShort.vcxproj.filters
src/aceinternal/protocol/: CMakeLists.txt  makefile  protocol.vcproj  protocol.vcxproj  protocol.vcxproj.filters
src/aceinternal/scene/: CMakeLists.txt  Scene.vcxproj  Scene.vcxproj.filters
src/aceinternal/scene/inc/: Line.h  Message.h  Plugin.h  PluginDepot.h  Pool.h  Scene.h  SceneDepot.h  SceneFactory.h  World.h
src/aceinternal/scene/src/: CrossServerConnect.cpp  CrossServerConnect.h  CrossServerSessionPool.cpp  CrossServerSessionPool.h  DBC.cpp  LineScene.cpp  LineScene.h  LoadDll.cpp  MakeGuid.cpp  MakeGuid.h  ManageBattleReport.cpp  ManageBattleReport.h  ManageContainerImp.cpp  ManageContainerImp.h  ManageCrossPlayerData.cpp  ManageCrossPlayerData.h  ManageCrossServer.h  ManageExchange.cpp  ManageExchange.h  ManageGmSession.cpp  ManageGmSession.h  ManageGridOptimize.cpp  ManagePluginConfig.cpp  ManageTimer.cpp  ManageTimer.h  PacketConvert.cpp  PacketConvert.h  Plugin.cpp  PluginDepotImp.h  Pool.cpp  PoolAssistant.cpp  PoolAssistant.h  PoolImp.cpp  PoolImp.h  SceneDepotImp.cpp  SceneImp.cpp  SceneImp.h  SceneRequest.cpp  SceneRequest.h  SceneRequestAssistant.cpp  (+2 more)
src/aceinternal/world/: CMakeLists.txt  makefile  world.vcproj  world.vcxproj
src/aceinternal/world/src/: MiniDumper.h  main.cpp
(+1287 files in other folders)
