cmake_minimum_required(VERSION 2.8)

include_directories(./inc ./src ../share/inc ../logger/inc ../scene/inc ../../../common/inc ../common/cachesys/inc ../../../common/material-cpp $ENV{ACE_INC} $ENV{BOOST_INC} $ENV{PROTOBUF_INC})
link_directories(../../bin $ENV{ACE_LIB} $ENV{BOOST_LIB} $ENV{PROTOBUF_LIB})
aux_source_directory(./src SRC_FILE)
add_executable(game_server ${SRC_FILE})
target_link_libraries(game_server ACE)
target_link_libraries(game_server pthread)
target_link_libraries(game_server protobuf)
target_link_libraries(game_server boost_system)
target_link_libraries(game_server boost_filesystem)
target_link_libraries(game_server share)
target_link_libraries(game_server logger)
target_link_libraries(game_server protocol)
target_link_libraries(game_server scene)
target_link_libraries(game_server gamelogic)
target_link_libraries(game_server terminal)
target_link_libraries(game_server cache)
target_link_libraries(game_server netstream)
target_link_libraries(game_server simplexml)
target_link_libraries(game_server boost_date_time)